--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/express": "^5.0.0",
@@ -48,5 +47,6 @@
     "mysql2": "^3.12.0",
     "nanoid": "^5.0.9",
     "sharp": "^0.33.5"
-  }
+  },
+  "description": ""
 }
